2006-09-29  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/enrollment.rb (Enrollment): Change to depend Article.

	* donrails/app/models/trackback.rb (Trackback): Remove 'excerpt' length validater. Because it caused side effect at banlist management. (todo)
	* donrails/test/functional/notes_controller_test.rb (NotesControllerTest::test_trackback__too_short_excerpt): likewise. Comment out.
	
	* donrails/app/controllers/notes_controller.rb 
	(NotesController::show_title): Cleanup.
	(NotesController::trackback): Cleanup.
	
2006-09-28  ARAKI Yasuhiro  <yasu@debian.or.jp>
	
	* donrails/app/models/trackback.rb (Trackback::notify_by_mail): likewise.
	* donrails/app/models/comment.rb (Comment::notify_by_mail): Fix to send comment mail.

	
	* donrails/app/models/ping.rb (Ping::send_ping2): Change to call send_ping_xmlrpc. If it fails, call send_ping_rest.
	(Ping::send_ping_rest): Rename send_ping2 to send_ping_rest. And refine it.
	(Ping::send_ping_xmlrpc): New method.

	* donrails/app/apis/don_web_service.rb (DonWebServiceStructs): likewise.
	(DonWebApi): likewise.
	(DonWebService::ping): likewise.

	* donrails/test/unit/ping_test.rb (PingTest::test_send_ping_xmlrpc): Apply for sending XML-RPC ping.

2006-09-27  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/lib/antispam.rb: Cleanup. Remove "[SP]" info in log.

	* NEW Feature: XML-RPC for blog client. (Tested by MS windows live writer.)
	* donrails/app/models/author.rb 
	(Author::self.authenticate): Add for XML-RPC.
	(Author::self.authenticate): likewise.
	* donrails/app/controllers/backend_controller.rb: likewise.
	* donrails/app/apis/don_web_service.rb: likewise.
	* donrails/app/apis/movable_type_service.rb: likewise.
	* donrails/app/apis/blogger_service.rb: likewise.
	* donrails/app/apis/meta_weblog_service.rb: likewise.
	
2006-09-26  ARAKI Yasuhiro  <yasu@debian.or.jp>
	
	* donrails/app/controllers/atom_controller.rb (AtomController::post): Fix to apply enrollment.
